fix style on ios

--- a/index.css
+++ b/index.css
@@ -291,8 +291,12 @@ ul {
 .exlore-list {
     display: flex;
     align-items: center;
-    gap: 10px;
     flex-wrap: wrap;
+}
+
+.exlore-list li {
+    margin-right: 10px;
+    margin-bottom: 10px;
 }
 
 .exlore-list li a {
